<resources>
    <string name="app_name">Discover Boston</string>
    <string name="title_activity_maps">Map</string>
    <string name="suggestion">You should probably go see the...</string>
    <string name="slang">Learn Boston slang</string>
    <string name="sports">Watch sports</string>
    <string name="eat_drink">Eat and drink</string>
    <string name="title">5 ways to discover Boston</string>
    <string name="movies">Watch movies shot here</string>
    <string name="explore">Explore the city</string>
    <string name="twitter">What is Twitter saying?</string>
    <string name="go">Let\'s go!</string>
    <string name="translate">Translate</string>
    <string name="if_you_like">If you like...</string>
    <string name="ice_hockey">Ice hockey</string>
    <string name="baseball">Baseball</string>
    <string name="basketball">Basketball</string>
    <string name="add_another_movie">Add another movie...</string>
    <string name="add">Add</string>
</resources>
